The sensitivity analysis has currently some limitations. - No support of multi-component computation (no way to report if a base simulation succeeds on one component but fails on another) - No indication of the cause of a failure to compute a contingency, compared to what is reported for a loadflow run. It makes it hard to troubleshoot issues when results are missing for a contingency. - No indication whether the result is complete or only partial, if the operation has been canceled and the thread interrupted.
- Enable to add multi-component support for sensitivity analysis inOpenLoadFlow
- Enable to return partial results in case of interruption
- Enable a better diagnosis of contingency failure

A branch / PR with the same name has been opened on PowSybl Core as API of the ResultWriter has changed

Signed-off-by: Fabrice Buscaylet <fabrice.buscaylet@artelys.com>